Viewport rendering isn't updating with changing of values of a material node group. but working if you change inside node group! #47870

Closed
opened 2016-03-21 06:00:06 +01:00 by Souvik Karmakar · 11 comments

System Information
Windows 10 , Intel HD graphics (i3 1st gen)

Blender Version
Broken: 2.77 cc12fc1
Worked: 2.77 22a2853

Short description of error
It's not updating in the viewport when I change a value of the node! but when I go to object mode and then again to render mode it's working or if I change it inside the group it's also working..

see the image you will get it:
Thanks!
blender_group_issue.jpg

**System Information** Windows 10 , Intel HD graphics (i3 1st gen) **Blender Version** Broken: 2.77 cc12fc1 Worked: 2.77 22a2853 **Short description of error** It's not updating in the viewport when I change a value of the node! but when I go to object mode and then again to render mode it's working or if I change it inside the group it's also working.. see the image you will get it: Thanks! ![blender_group_issue.jpg](https://archive.blender.org/developer/F297508/blender_group_issue.jpg)

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Souvik Karmakar 2016-03-21 06:00:06 +01:00

Added subscriber: @SouvikKarmakar

Added subscriber: @SouvikKarmakar
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

The reason this doesn't work is that the output node is included in the group. Since 83824947ba nodes don't trigger a reset of the viewport render if they are "not connected to the output node", but the test for this condition only works on the top node level (so the group instance is not considered a used node).

IMO testing dependencies between nodes shouldn't really happen on the UI node level because of the complexity and potential non-standard behavior of connections (when is a socket connection actually "used"?). However, current Blender nodes lack an intermediate level between the UI nodes (bNodes in DNA) and the "machine code" of the renderer. Until this can be improved, the best solution would be just handling node groups as a special case i suppose.

@SouvikKarmakar: Please leave it to devs to assign a bug report to somebody. This is not really @ideasman42's area anyway.

The reason this doesn't work is that the output node is included in the group. Since 83824947ba nodes don't trigger a reset of the viewport render if they are "not connected to the output node", but the test for this condition only works on the top node level (so the group instance is not considered a used node). IMO testing dependencies between nodes shouldn't really happen on the UI node level because of the complexity and potential non-standard behavior of connections (when is a socket connection actually "used"?). However, current Blender nodes lack an intermediate level between the UI nodes (bNodes in DNA) and the "machine code" of the renderer. Until this can be improved, the best solution would be just handling node groups as a special case i suppose. @SouvikKarmakar: Please leave it to devs to assign a bug report to somebody. This is not really @ideasman42's area anyway.
Campbell Barton was unassigned by Lukas Tönne 2016-03-21 09:08:00 +01:00
Lukas Tönne self-assigned this 2016-03-21 09:08:00 +01:00
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

@Sergey I don't see an easy way to support node groups with this. The definition of "active output node" is shaky even in normal cases, but when you include it in a node group it becomes quite unpredictable which instance would be considered "active". I guess output nodes inside groups are just unsupported?

In future nodes i could imagine output nodes working more like node group outputs: The sockets on "global" output nodes for a graph would depend on the ntree context. In the top-level nodes you get the formal output parameters ("Material/Volume/Displacement" for cycles nodes). Inside node groups it would just should the respective group outputs, thus forcing you to always connect to the final output on the top level.

@Sergey I don't see an easy way to support node groups with this. The definition of "active output node" is shaky even in normal cases, but when you include it in a node group it becomes quite unpredictable which instance would be considered "active". I guess output nodes inside groups are just unsupported? In future nodes i could imagine output nodes working more like node group outputs: The sockets on "global" output nodes for a graph would depend on the ntree context. In the top-level nodes you get the formal output parameters ("Material/Volume/Displacement" for cycles nodes). Inside node groups it would just should the respective group outputs, thus forcing you to always connect to the final output on the top level.

In #47870#365103, @LukasTonne wrote:
The reason this doesn't work is that the output node is included in the group. Since 83824947ba nodes don't trigger a reset of the viewport render if they are "not connected to the output node", but the test for this condition only works on the top node level (so the group instance is not considered a used node).

IMO testing dependencies between nodes shouldn't really happen on the UI node level because of the complexity and potential non-standard behavior of connections (when is a socket connection actually "used"?). However, current Blender nodes lack an intermediate level between the UI nodes (bNodes in DNA) and the "machine code" of the renderer. Until this can be improved, the best solution would be just handling node groups as a special case i suppose.

@SouvikKarmakar: Please leave it to devs to assign a bug report to somebody. This is not really @ideasman42's area anyway.

ah I didn't get what you said .. and for the last statement .. I don't really that much here so I don't know about which campbell's area..
is campbell only handle new addons? thanks :P

> In #47870#365103, @LukasTonne wrote: > The reason this doesn't work is that the output node is included in the group. Since 83824947ba nodes don't trigger a reset of the viewport render if they are "not connected to the output node", but the test for this condition only works on the top node level (so the group instance is not considered a used node). > > IMO testing dependencies between nodes shouldn't really happen on the UI node level because of the complexity and potential non-standard behavior of connections (when is a socket connection actually "used"?). However, current Blender nodes lack an intermediate level between the UI nodes (bNodes in DNA) and the "machine code" of the renderer. Until this can be improved, the best solution would be just handling node groups as a special case i suppose. > > @SouvikKarmakar: Please leave it to devs to assign a bug report to somebody. This is not really @ideasman42's area anyway. ah I didn't get what you said .. and for the last statement .. I don't really that much here so I don't know about which campbell's area.. is campbell only handle new addons? thanks :P

and btw .. it's working on the stable version... but not the latest build .. hope you already know it :p .. so it's not that problem.. but it should be fixed in next build .. thanks :3

and btw .. it's working on the stable version... but not the latest build .. hope you already know it :p .. so it's not that problem.. but it should be fixed in next build .. thanks :3
Lukas Tönne removed their assignment 2016-03-22 14:48:16 +01:00
Sergey Sharybin was assigned by Lukas Tönne 2016-03-22 14:48:16 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 2103e2112c

This issue was referenced by 2103e2112cca3e3385ac057bbe8976925eadd6d4
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47870
No description provided.