Fix T47870: Missing viewport update when material output is inside of the group